syntax = "proto3";

package acs4;

import "aelf/options.proto";
import "aelf/core.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

option (aelf.identity) = "acs4";

service ConsensusContract {
    rpc GetConsensusCommand (google.protobuf.BytesValue) returns (ConsensusCommand) {
        option (aelf.is_view) = true;
    }
    rpc GetConsensusExtraData (google.protobuf.BytesValue) returns (google.protobuf.BytesValue) {
        option (aelf.is_view) = true;
    }
    rpc GenerateConsensusTransactions (google.protobuf.BytesValue) returns (TransactionList) {
        option (aelf.is_view) = true;
    }
    rpc ValidateConsensusBeforeExecution (google.protobuf.BytesValue) returns (ValidationResult) {
        option (aelf.is_view) = true;
    }
    rpc ValidateConsensusAfterExecution (google.protobuf.BytesValue) returns (ValidationResult) {
        option (aelf.is_view) = true;
    }
}

message ConsensusCommand {
    int32 limit_milliseconds_of_mining_block = 2;// Time limit of mining next block.
    bytes hint = 3;// Context of Hint is diverse according to the consensus protocol we choose, so we use bytes.
    google.protobuf.Timestamp arranged_mining_time = 4;
    google.protobuf.Timestamp mining_due_time = 5;
}

message ValidationResult {
    bool success = 1;
    string message = 2;
}

message TransactionList {
    repeated aelf.Transaction transactions = 1;
}