syntax = "proto3";

option csharp_namespace = "AElf";

message Address
{
    bytes Value = 1;
}

message Hash
{
    bytes Value = 1;
}

message SInt32Value
{
    sint32 Value = 1;
}

message SInt64Value
{
    sint64 Value = 1;
}

enum TimeUnit {
    Days = 0;
    Months = 1;
    Minutes = 2;
    Hours = 3;
}